--- a/assets/styles_cv.css
+++ b/assets/styles_cv.css
@@ -59,7 +59,7 @@ body{
 
 .resume .view_more_btn a{
     display: block;
-    background: #3e20da;
+    background: #007AFF;
     color: #fff;
     padding: 10px 15px;
     width: 125px;
@@ -74,7 +74,7 @@ body{
 .resume .title{
     font-size: 16px;
     font-weight: 700;
-    color: #3e20da;
+    color: #007AFF;
     margin-bottom: 15px;
 }
 
@@ -159,7 +159,7 @@ body{
 .full_info_wrap .tabs ul li.active,
 .full_info_wrap .tabs ul li:hover{
   background: #fff;
-  color: #3e20da;
+  color: #007AFF;
 }
 
 .full_info{
@@ -183,7 +183,7 @@ body{
 .info_wrap .sub_title{
   font-size: 16px;
   font-weight: 600;
-  color: #3e20da;
+  color: #007AFF;
 }
 
 .info_wrap .info_item{
